syntax = "proto3";

package users;

message User {
    bytes id = 1;
    string email = 2;
    string nickname = 3;
    string first_name = 4;
    string last_name = 5;
    uint64 created_at = 6;
}

message CreateUserRequest {
    string email = 1;
    string nickname = 2;
    string first_name = 3;
    string last_name = 4;
}

message CreateUserResponse {
    bytes id = 1;
    string email = 2;
    uint64 created_at = 3;
}

message GetByFiltersRequest {
    optional bytes id = 1;
    optional string email = 2;
    optional string nickname = 3;
}

message ListByFiltersRequest {
    int32 offset = 1;
    int32 page = 2;
    int32 limit = 3;
}

message ListByFiltersResponse {
    repeated User users = 1;
}

message UpdateUserRequest {
    bytes id = 1;
    optional string nickname = 2;
    optional string first_name = 3;
    optional string last_name = 4;
}

message UpdateUserResponse {
    bytes id = 1;
    uint64 updated_at = 2;
}

message DeleteUserRequest {
    bytes id = 1;
}

message DeleteUserResponse {
    bytes id = 1;
    uint64 deleted_at = 2;
}

service Users {
    rpc Create (CreateUserRequest) returns (CreateUserResponse);
    rpc GetByFilters (GetByFiltersRequest) returns (User);
    rpc ListByFilters (ListByFiltersRequest) returns (ListByFiltersResponse);
    rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
    rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}